assets/prometheus-user-workload/service-thanos-sidecar.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: prometheus-user-workload-thanos-sidecar-tls
  labels:
    app.kubernetes.io/component: thanos-sidecar
    app.kubernetes.io/instance: user-workload
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: openshift-monitoring
    app.kubernetes.io/version: 3.13.1
  name: prometheus-user-workload-thanos-sidecar
  namespace: openshift-user-workload-monitoring
spec:
  clusterIP: None
  ports:
  - name: thanos-proxy
    port: 10902
    targetPort: thanos-proxy
  selector:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: user-workload
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: openshift-monitoring
