assets/prometheus-user-workload/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/description: |-
      Expose the Prometheus web server within the cluster on the following ports:
      * Port 9091 provides access to the `/metrics` endpoint only. This port is for internal use, and no other usage is guaranteed.
      * Port 9092 provides access to the `/federate` endpoint only. Granting access requires binding a user to the `cluster-monitoring-view` cluster role.

      This also exposes the `/metrics` endpoint of the Thanos sidecar web server on port 10902. This port is for internal use, and no other usage is guaranteed.
    service.beta.openshift.io/serving-cert-secret-name: prometheus-user-workload-tls
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: user-workload
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: openshift-monitoring
    app.kubernetes.io/version: 3.13.1
  name: prometheus-user-workload
  namespace: openshift-user-workload-monitoring
spec:
  ports:
  - name: metrics
    port: 9091
    targetPort: metrics
  - name: federate
    port: 9092
    targetPort: federate
  - name: thanos-proxy
    port: 10902
    targetPort: thanos-proxy
  selector:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: user-workload
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: openshift-monitoring
  sessionAffinity: ClientIP
  type: ClusterIP
