assets/prometheus-user-workload/federate-route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    capability.openshift.io/name: OptionalMonitoring
    openshift.io/description: Expose the `/federate` endpoint of the `prometheus-user-workload` service via a router.
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: federate
  namespace: openshift-user-workload-monitoring
spec:
  path: /federate
  port:
    targetPort: federate
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: prometheus-user-workload
